set(ATLAS_INCLUDE_GL_ROOT "${ATLAS_INCLUDE_ROOT}/gl")

add_subdirectory(${ATLAS_INCLUDE_GL_ROOT}/quadrics)

set(ATLAS_INCLUDE_GL_LIST
    "${ATLAS_INCLUDE_GL_ROOT}/ErrorCheck.hpp"
    "${ATLAS_INCLUDE_GL_ROOT}/GL.hpp"
    "${ATLAS_INCLUDE_GL_ROOT}/Shader.hpp"
    PARENT_SCOPE)

set(ATLAS_INCLUDE_GL_QUADRICS_LIST ${QUADRICS_INCLUDE_LIST} PARENT_SCOPE)

if (ATLAS_INCLUDE_TEXTURE)
    list(APPEND ATLAS_INCLUDE_GL_LIST "${ATLAS_INCLUDE_GL_ROOT}/Texture.hpp")
endif()
