set(ATLAS_SOURCE_GL_ROOT "${ATLAS_SOURCE_ROOT}/gl")

add_subdirectory(${ATLAS_SOURCE_GL_ROOT}/quadrics)

set(ATLAS_SOURCE_GL_LIST
    "${ATLAS_SOURCE_GL_ROOT}/ErrorCheck.cpp"
    "${ATLAS_SOURCE_GL_ROOT}/Shader.cpp"
    PARENT_SCOPE)

set(ATLAS_SOURCE_GL_QUADRICS_LIST ${QUADRICS_SOURCE_LIST} PARENT_SCOPE)

if (ATLAS_INCLUDE_TEXTURE)
    list(APPEND ATLAS_SOURCE_GL_LIST "${ATLAS_SOURCE_GL_ROOT}/Texture.cpp")
endif()
